# Hobbit

./: .clang-format  .gitignore  CMakeLists.txt  README.md
AST/: CMakeLists.txt
AST/include/: Node.hpp  NodeTypes.def  Visitor.hpp
AST/include/ast/: DataStorage.hpp  Node.hpp  Operator.hpp
AST/src/: DataStorage.cpp  Node.cpp  Operator.cpp  Visitor.cpp
AST/test/: TestAST.cpp
Buffer/: CMakeLists.txt
Buffer/include/: Buffer.hpp  CompileTimeBuffer.hpp  Shape.hpp
Buffer/src/: Buffer.cpp  Shape.cpp
Buffer/test/: TestBuffer.cpp  TestShape.cpp
CodeGen/: CMakeLists.txt
CodeGen/include/: FunctionCG.hpp  KernelCG.hpp  LoopCG.hpp  TensorCG.hpp
CodeGen/src/: FunctionCG.cpp  KernelCG.cpp  LoopCG.cpp  TensorCG.cpp
Core/: CMakeLists.txt
Core/include/: Function.hpp  Module.hpp  Node.hpp  OpNode.hpp  Symbol.hpp  Tensor.hpp  Type.hpp  Variable.hpp
Core/src/: Function.cpp  Module.cpp  Node.cpp  OpNode.cpp  Shape.cpp  Symbol.cpp  Tensor.cpp  Type.cpp  Variable.cpp
Core/test/: TestCore.cpp
DAG/: CMakeLists.txt
DAG/include/: DAGNode.hpp  DAGNodeVisitor.hpp
DAG/src/: DAGNodeVisitor.cpp
KernelFusion/: CMakeLists.txt
KernelFusion/src/: KernelFusion.cpp
Module/: CMakeLists.txt
Module/include/: ElementWiseFunctors.hpp  Function.hpp  Functor.hpp  Kernel.hpp  Module.hpp  Operation.hpp  ReductionFunctors.hpp
Module/src/: Function.cpp  Kernel.cpp  Module.cpp  Operation.cpp
Module/test/: TestModule.cpp
Operation/: CMakeLists.txt
Operation/archive/: CompositeOp.cpp  CompositeOp.hpp  ElementWiseOp.cpp  ElementWiseOp.hpp  ReductionOp.cpp
Operation/include/: ElementWiseFunctors.hpp  Functor.hpp  Operation.hpp  ReductionFunctors.hpp
Operation/src/: Operation.cpp
Operation/test/: TestCompositeOp.cpp  TestElementWiseOp.cpp
Operator/: CMakeLists.txt
Operator/include/: Buffer.hpp  CompositeOp.hpp  CompositeOperator.hpp  ElementWiseOp.hpp  Operator.hpp  ReductionOp.hpp  Variable.hpp
Operator/src/: Buffer.cpp  CompositeOp.cpp  CompositeOperator.cpp  ElementWiseOp.cpp  ReductionOp.cpp  Variable.cpp
Operator/test/: TestCompositeOp.cpp  TestElementWiseOp.cpp  TestReductionOp.cpp
Operators/: CMakeLists.txt  gemm.c  gemm.ll
Operators/include/: Operator.hpp  OperatorTypes.def
Operators/registry/: gemm.cpp
Operators/src/: gemm.cpp
Operators/test/: Testgemm.cpp
Operators/utils/: LoopCG.cpp  LoopCG.hpp
SplitLoop/: CMakeLists.txt  test.cpp
SplitLoop/include/: Index.hpp
SplitLoop/src/: Index.cpp  SplitLoop.cpp
cmake/: AddClangFormat.cmake  AddGTest.cmake  AddLLVM.cmake
include/ast/: DataStorage.hpp  Node.hpp  Operator.hpp
include/codegen/: CGVisitor.hpp  Module.hpp  TreeBuilder.hpp  TreeCodeGen.hpp  TreeVisitor.hpp  Type.hpp  Visitor.hpp
include/compile/: AOT.hpp  JIT.hpp  Optimize.hpp
include/graph/: DataStorage.hpp  Node.hpp  NodeTypes.def  Operation.hpp  Shape.hpp  Variable.hpp
include/ops/: Factory.hpp  Operator.hpp  OperatorTypes.def  eltwise_add.hpp  gemm.hpp  mock.hpp
include/utils/: LoopCG.hpp
passes/: CMakeLists.txt
passes/KernelFusion/: test.c
passes/KernelFusion/src/: KernelFusion.cpp
registry/: CMakeLists.txt  eltwise_add.cpp  gemm.cpp
registry/test/: Testeltwise_add.cpp  Testgemm.cpp
registry/utils/: LoopCG.cpp
sourcetrail/: Hobbit.srctrlprj
src/: CGVisitor.cpp  DataStorage.cpp  LoopCG.cpp  Module.cpp  Operator.cpp  Shape.cpp  TreeVisitor.cpp  Visitor.cpp  eltwise_add.cpp  gemm.cpp  mock.cpp
src/codegen/: CGVisitor.cpp  Module.cpp  TreeBuilder.cpp  TreeCodeGen.cpp  TreeVisitor.cpp
src/compile/: AOT.cpp  JIT.cpp  Optimize.cpp
src/graph/: Operation.cpp  Variable.cpp
src/ops/: eltwise_add.cpp  gemm.cpp  mock.cpp
src/utils/: LoopCG.cpp
test/: TestAST.cpp  TestDataStorage.cpp  TestHelper.hpp
testing/: sample.cpp
